[package]
name = "cargo-brew"
version = "0.1.4"
authors = ["Sean Marshallsay <srm.1708@gmail.com>"]

description = "A cargo install wrapper to automatically install binaries into Homebrew."
keywords = ["cargo", "install", "homebrew", "brew"]
readme = "README.md"

homepage = "https://github.com/Sean1708/cargo-brew"
repository = "https://github.com/Sean1708/cargo-brew.git"

license = "MIT"

[dependencies]
rand = "0.3"
regex = "0.1"
userror = "0.1"
